Add sublime as editor, and FileMerge as mergetool (for git).

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -4,6 +4,9 @@
         protocol = https
 [core]
         excludesfile = /Users/student/.gitignore
+        editor = subl -w
 [user]
         name = MakerSquare Student
         email = students@themakersquare.com
+[merge]
+        tool = opendiff
